RESOLVED FIXED222467
Fix clang compilation error in PlatformXR::ViewData initialization
https://bugs.webkit.org/show_bug.cgi?id=222467
Summary Fix clang compilation error in PlatformXR::ViewData initialization
Imanol Fernandez
Reported 2021-02-26 05:06:58 PST
Compilation can fail if the related C99 extension is not supported. Mixture of designated and non-designated initializers in the same initializer list is a C99 extension [-Wc99-designator] ../../Source/WebCore/platform/xr/openxr/PlatformXROpenXR.cpp:218:24: warning: mixture of designated and non-designated initializers in the same initializer list is a C99 extension [-Wc99-designator] views.append({ .active = true, Eye::Right }); ^~~~~~~~~~~~~~ ../../Source/WebCore/platform/xr/openxr/PlatformXROpenXR.cpp:218:40: note: first non-designated initializer is here views.append({ .active = true, Eye::Right }); ^~~~~~~~~~
Attachments
Patch (3.48 KB, patch)
2021-02-26 05:35 PST, Imanol Fernandez
no flags
Imanol Fernandez
Comment 1 2021-02-26 05:35:55 PST
Philippe Normand
Comment 2 2021-02-26 05:37:48 PST
Comment on attachment 421634 [details] Patch Thanks!
EWS
Comment 3 2021-02-26 06:07:22 PST
Committed r273553: <https://commits.webkit.org/r273553> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421634 [details].
Radar WebKit Bug Importer
Comment 4 2021-02-26 06:08:14 PST
Note You need to log in before you can comment on or make changes to this bug.