Fix clang compilation error in PlatformXR::ViewData initialization https://bugs.webkit.org/show_bug.cgi?id=222467

Patch by Imanol Fernandez <ifernandez@igalia.com> on 2021-02-26
Reviewed by Philippe Normand.

Mixture of designated and non-designated struct initializers is a C99 extension.
Switch to designated initializers to avoid compilation errors in compilers not
supporting the extension.

* Modules/webxr/WebXRSystem.cpp:
(WebCore::WebXRSystem::DummyInlineDevice::views const):
* platform/xr/openxr/PlatformXROpenXR.cpp:
(PlatformXR::OpenXRDevice::views const):
* testing/WebFakeXRDevice.cpp:
(WebCore::SimulatedXRDevice::views const):

Canonical link: https://commits.webkit.org/234613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273553 268f45cc-cd09-0410-ab3c-d52691b4dbfc